@@ -158,6 +158,7 @@
    <addaction name="actionSearch"/>
    <addaction name="actionClear"/>
    <addaction name="actionAbout"/>
+   <addaction name="actionOptions"/>
    <addaction name="actionSupport"/>
    <addaction name="actionQuit"/>
   </widget>
@@ -167,7 +168,7 @@
      <x>0</x>
      <y>0</y>
      <width>760</width>
-     <height>21</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -191,7 +192,8 @@
     <property name="title">
      <string>&amp;Help</string>
     </property>
-    <addaction name="actionAbout"/>
+	<addaction name="actionAbout"/>
+	<addaction name="actionOptions"/>
     <addaction name="actionSupport"/>
    </widget>
    <addaction name="menu_File"/>
@@ -281,6 +283,14 @@
   <action name="actionOpen">
    <property name="text">
     <string>Open</string>
+   </property>
+  </action>
+  <action name="actionOptions">
+   <property name="text">
+    <string>&amp;Options</string>
+   </property>
+   <property name="iconVisibleInMenu">
+    <bool>true</bool>
    </property>
   </action>
  </widget>
